--- a/templates/index.html
+++ b/templates/index.html
@@ -20,7 +20,7 @@
       <input class="" type="search" placeholder="Поиск" aria-label="Search" style="height: 40px; width: 300px; border: solid #FF9A37; margin-left: auto; border-radius: 20px; box-shadow: 0px 0px 5px 2px #f4cc85">
       <nav class="d-inline-flex mt-2 mt-md-0 ms-md-auto">
         <form action="login"><button class="btn btn-primary" type="submit" style="margin-right: 25px; color: black; background-color: white; border: solid #FF9A37; border-radius: 20px; width: 75px; box-shadow: 0px 0px 5px 2px #f4cc85">Вход</button></form>
-        <form action="signup"><button class="btn btn-primary" type="submit" style="background-color: white; color: black;  border: solid #FF9A37; border-radius: 20px; width: 115px; box-shadow: 0px 0px 5px 2px #f4cc85">Регистрация</button></form>
+        <form action="register"><button class="btn btn-primary" type="submit" style="background-color: white; color: black;  border: solid #FF9A37; border-radius: 20px; width: 115px; box-shadow: 0px 0px 5px 2px #f4cc85">Регистрация</button></form>
       </nav>
     </div>
   </header>
