--- a/templates/register.html
+++ b/templates/register.html
@@ -33,13 +33,13 @@
                 <label for="Login"><b style="margin-left: 200px">Логин</b></label>
                 <input type="text" style="margin-top: 10px; height: 75px; width: 460px; border: solid #FF9A37; border-radius: 20px; box-shadow: 0px 0px 5px 2px #f4cc85; font-size: 35px" placeholder="" name="login" value="" required>
                 <br>
-                <label for="Login"><b style="margin-left: 200px">email</b></label>
+                <label for="EMail"><b style="margin-left: 200px">email</b></label>
                 <input type="text" style="margin-top: 10px; height: 75px; width: 460px; border: solid #FF9A37; border-radius: 20px; box-shadow: 0px 0px 5px 2px #f4cc85; font-size: 35px" placeholder="" name="email" value="" required>
                 <br>
-                <label for="Login"><b style="margin-left: 200px">Пароль</b></label>
+                <label for="Password"><b style="margin-left: 200px">Пароль</b></label>
                 <input type="password" style="margin-top: 10px; height: 75px; width: 460px; border: solid #FF9A37; border-radius: 20px; box-shadow: 0px 0px 5px 2px #f4cc85; font-size: 35px" placeholder="" name="psw" value="" required>
                 <br>
-                <label for="Password" style="margin-top: 20px; margin-bottom: 10px; margin-left: 200px"><b>Повтор пароля</b></label>
+                <label for="Password2" style="margin-top: 20px; margin-bottom: 10px; margin-left: 200px"><b>Повтор пароля</b></label>
                 <input type="password" style="height: 75px; width: 460px; border: solid #FF9A37; border-radius: 20px; box-shadow: 0px 0px 5px 2px #f4cc85; font-size: 35px" placeholder="" name="psw2" value="" required>
                 <br>
                 <button type="submit" class="box">Зарегистрироваться</button>
