--- a/templates/login.html
+++ b/templates/login.html
@@ -30,15 +30,16 @@
         <div class="space" style="padding: 20px; margin: 10px 225px 20px 225px; height: 450px; justify-content: center; display: flex; align-items: center; font-weight: bold">
             <form method="POST">
               <div class="container">
-                <label for="Login"><b style="margin-left: 200px">Логин</b></label>
-                <input type="text" style="margin-top: 10px; height: 75px; width: 460px; border: solid #FF9A37; border-radius: 20px; box-shadow: 0px 0px 5px 2px #f4cc85; font-size: 35px" placeholder="" name="Login" required>
+                <label for="email"><b style="margin-left: 200px">email</b></label>
+                <input type="text" style="margin-top: 10px; height: 75px; width: 460px; border: solid #FF9A37; border-radius: 20px; box-shadow: 0px 0px 5px 2px #f4cc85; font-size: 35px" placeholder="" name="email" value="" required>
                 <br>
-                <label for="Password" style="margin-top: 20px"><b style="margin-top: 20px; margin-left: 200px">Пароль</b></label>
-                <input type="password" style="height: 75px; width: 460px; margin-top: 10px; border: solid #FF9A37; border-radius: 20px; box-shadow: 0px 0px 5px 2px #f4cc85; font-size: 35px" placeholder="" name="Password" required>
+                <label for="psw" style="margin-top: 20px"><b style="margin-top: 20px; margin-left: 200px">Пароль</b></label>
+                <input type="password" style="height: 75px; width: 460px; margin-top: 10px; border: solid #FF9A37; border-radius: 20px; box-shadow: 0px 0px 5px 2px #f4cc85; font-size: 35px" placeholder="" name="psw" value="" required>
                 <br>
+                  <input type="checkbox" name="remainme"> Запомнить меня
                 <button type="submit" class="box">Войти</button>
                 <div class="container">
-                    <button class="box"> <a href="/signup" class="orange" style="text-decoration: none">Регистрация</a></button>
+                    <button class="box"> <a href="register" class="orange" style="text-decoration: none">Регистрация</a></button>
                 </div>
               </div>
             </form>
