--- a/static/css/style.css
+++ b/static/css/style.css
@@ -96,10 +96,50 @@ ul.list-posts .title {
          padding: 5px;
          background: #eee;
 }
-ul.list-posts .annonce {
+ul.list-posts.annonce {
          margin: 0;
          padding: 10px 5px 10px 5px;
 }
+
+.profile-ava {
+    box-sizing: border-box;
+    position: absolute;
+    width: 200px;
+    height: 200px;
+    left: 153px;
+    top: 102px;
+
+    background: url(image.png);
+    border: 1px solid #000000;
+}
+
+.profile-ava img {max-width: 150px; height:auto;}
+
+.profile-load {
+    margin-top: 10px;
+    overflow: hidden;
+    max-width: 150px;
+}
+
+.profile-load input[type=submit], input[type=submit] {
+    width: 100%;
+    font-size: 18px;
+}
+
+.profile-load p {
+    padding: 0;
+    margin: 5px 0 0 0;
+}
+
+.profile-panel{padding: 0 0 0 10px;}
+ul.profile-info {
+    list-style: none;
+    margin: 10px 0 0 0;
+    padding: 0;
+    color: #7E652F;
+}
+
+ul.profile-info li {margin-top: 10px;}
 
 div.container6 {
   height: 10em;
